# text_representation

./: Cargo.toml
src/: lib.rs
src/api/: asynchonously_editable_text_buffer.rs  edit_operations.rs  formatting.rs  idx.rs  mod.rs  text_buffer.rs  text_buffer_cursor.rs
src/contiguous_string/: asynconously_editable_impl.rs  buffer_impl.rs  cursor_impl.rs  grapheme.rs  mod.rs
src/rope/: buffer_impl.rs  cursor_impl.rs  dot.rs  grapheme.rs  mod.rs
