[package]
name = "text_representation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#error handing
thiserror = "1.0.38"
color-eyre = "0.6.2"
#ser-de
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"

unicode-segmentation = "1.10.1"
ropey = { version = "1.6.0" }

strum = { version = "0.24", features = ["derive"] }
